# icu-mle-purple

./: .gitignore  Dockerfile  README.md  amber-manifest.json5  mle-solver.yaml  mle-solver.yaml.sample  pyproject.toml  test_assessment.py
.github/workflows/: test-and-publish.yml
src/: agent.py  executor.py  server.py
src/mle_solver/: __init__.py  config.py  ensemble.py  llm.py  panel.py  runner.py
src/mle_solver/agents/: __init__.py  code_gen.py  parser.py  reviewer.py
src/mle_solver/exec/: __init__.py  code_fix.py  fake_success.py  interpreter.py
src/mle_solver/prompts/: __init__.py  debug.py  draft.py  improve.py  system.py
src/mle_solver/protocol/: __init__.py  contract.py  splits.py
src/mle_solver/tree/: __init__.py  journal.py  loop.py  node.py  ranking.py  selector.py
tests/: conftest.py  test_agent.py  test_config.py  test_fake_success.py  test_parser.py  test_prompts.py  test_protocol.py  test_reviewer.py  test_tree.py
