[project]
name = "agent-template"
version = "0.1.0"
description = "A template for A2A agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Agent server
    "a2a-sdk[http-server]>=0.3.20",
    "uvicorn>=0.38.0",

    # LLM backends
    "python-dotenv>=1.0.1",
    "openai>=1.66.3",
    "google-genai>=1.51.0",
    "backoff>=2.2.1",
    "funcy>=2.0",
    "jsonschema>=4.23.0",

    # Submission validation
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "requests>=2.32.0",

    # Utilities
    "black>=24.0.0",
    "genson>=1.3.0",

    # Competition execution environment — core
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "transformers>=4.40.0",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "catboost>=1.2.0",
    "statsmodels>=0.14.0",

    # Competition execution environment — additional
    "bayesian-optimization>=2.0.0",
    "optuna>=4.0.0",
    "hyperopt>=0.2.7",
    "imbalanced-learn>=0.13.0",
    "category_encoders>=2.8.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "fastparquet>=2024.0.0",
    "seaborn>=0.13.0",
    "pytorch-tabnet>=4.0.0",
    "albumentations>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "timm>=1.0.0",
    "einops>=0.8.0",
    "accelerate>=1.0.0",
    "sentence-transformers>=2.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]
